// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-authenticator spec: Render logic -> should render a \`forgot password\` if initialAuthState is \`forgotpassword\` 1`] = `
<amplify-authenticator initial-auth-state="forgotpassword">
  <mock:shadow-root>
    <slot name="forgot-password">
      <amplify-forgot-password></amplify-forgot-password>
    </slot>
  </mock:shadow-root>
</amplify-authenticator>
`;

exports[`amplify-authenticator spec: Render logic -> should render a \`sign in\` by default 1`] = `
<amplify-authenticator>
  <mock:shadow-root>
    <slot name="sign-in">
      <amplify-sign-in></amplify-sign-in>
    </slot>
  </mock:shadow-root>
</amplify-authenticator>
`;

exports[`amplify-authenticator spec: Render logic -> should render a \`sign up\` if initialAuthState is \`signup\` 1`] = `
<amplify-authenticator initial-auth-state="signup">
  <mock:shadow-root>
    <slot name="sign-up">
      <amplify-sign-up></amplify-sign-up>
    </slot>
  </mock:shadow-root>
</amplify-authenticator>
`;
